--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,9 +1,9 @@
 <hgroup>
   <div id="logo">
-  	<div id="logoLeft">{</div>
-  	<div id="logoText">sihugh</div>
-  	<div id="logoRight">}</div>
-  	<div class="clear"></div>
+    <div id="logoLeft">{</div>
+    <div id="logoText">mtmxr</div>
+    <div id="logoRight">}</div>
+    <div class="clear"></div>
   </div>
   <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
   {% if site.subtitle %}
