--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,5 @@
 <p>
   Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0;vertical-align:text-top" src="http://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
