--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,7 +1,7 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
 
-.footnote {
-  font-size: 75%;
-  padding-left: 25px;
+a[rel=footnote] {
+    font-size: 0.8em;
+    margin: 0.2em;
 }
